--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,6 @@ body {
 header {
     width: 85%;
     margin: 0 auto;
-    border: 1px solid #000;
 }
 .header-logo {
     text-align: center;
@@ -91,4 +90,122 @@ main {
     width: 100%;
     height: 500px;
     object-fit: cover;
+}
+.profile {
+    display: flex;
+    height: 200px;
+    margin: 50px;
+}
+.profile-title {
+    margin-bottom: 30px;
+}
+.profile-des_inner {
+    flex: 2;
+}
+.profile_img_inner {
+    flex: 1;
+}
+.profile_img {
+    padding: 20px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.feature {
+    display: flex;
+    margin: 100px 0;
+}
+.feature_title {
+    margin-bottom: 20px;
+}
+.feature-des {
+    flex: 1;
+    padding-right: 150px;
+}
+.feature_img_inner {
+    flex: 1;
+    max-height: 600px;
+}
+.feature_img {
+    /* transition: all 0.3s; */
+}
+.feature_img.active {
+    transition: all 0.3s;
+    opacity: 0;
+}
+.feature-item {
+    margin-bottom: 30px;
+}
+.news {
+    margin: 50px 0;
+}
+.news_inner {
+    width: 60%;
+    margin: 0 auto;
+}
+.news-title {
+    padding: 30px 0;
+    text-align: center;
+}
+.news-item {
+    display: flex;
+    width: 100%;
+    padding-bottom: 30px;
+}
+.news-des_inner {
+    padding-left: 50px;
+    border-bottom: 1px dotted #000;
+    width: calc(100% - 75px);
+}
+.news-des-title {
+    padding-top: 10px;
+}
+.news-img_inner {
+    width: 75px;
+    height: 75px;
+}
+.news-date {
+    text-align: right;
+}
+.news-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+/* フッター */
+.footer_inner {
+    width: 85%;
+    height: 300px;
+    background-image: url("../img/cafe_footer.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 0 auto;
+    display: flex;
+}
+.map-des_inner {
+    flex: 1;
+    padding: 50px;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+.map_inner {
+    flex: 1;
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.7);
+
+}
+.map_inner iframe {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+table {
+    
+}
+td {
+    width: 70px;
+    padding: 10px;
 }
