--- a/css/style.css
+++ b/css/style.css
@@ -270,9 +270,17 @@ table,td {
 td {
     width: 150px;
     padding: 10px;
+    position: relative;
 }
 i {
     margin-right: 5px;
+}
+td a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 .copyright {
     width: 85%;
